# Projeto_Relatorio_Automatizado

./: README.md  carregar.py  gerar_relatorio.py  pyproject.toml  tratar.py
