[project]
name = "projeto-relatorio-automatizado"
version = "0.1.0"
description = ""
authors = [
    {name = "Nathan Nery",email = "nathannery84@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pandas (>=2.3.3,<3.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
